# poetry-config-script

./: README.md  pyproject.toml
src/poetry_config_script/: cli.py  patch.py  utils.py
tests/unit/: test_patch.py  test_utils.py
